Hacky fix re vertical centre alignment of spinner

--- a/client/styles.css
+++ b/client/styles.css
@@ -41,3 +41,10 @@ body {
     height: 15px;
     background-image: url('assets/spinner.png');
 }
+
+.feedbackColumn {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 64px;
+}
